--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "bootstrap": "^4.5.3",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ngx-cookie": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
